# gitop

./: Cargo.toml  README.md  git-monitor.toml  gitop.toml
src/: main.rs
