[package]
name = "gitop"
version = "0.1.0"
edition = "2024"
description = "A terminal-based git repository monitor with real-time status updates"
authors = ["Alan Tokarsky <alantokarsky@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["git", "monitor", "terminal", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.0", features = ["full"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
